modal right whitespace fix

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -197,3 +197,7 @@ select {
 .brick-wrapper .adventure-brick .image-wrapper .copy  .profile-page-title {
   font-size: 17px !important;
 }
+
+.modal {
+  right: -15px !important;
+}
